--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,7 +49,7 @@
                     <th>Messages</th>
                 </tr>
                 </thead>
-                <tbody id="greetings">
+                <tbody id="messages">
                 </tbody>
             </table>
         </div>
